--- a/archives.html
+++ b/archives.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
+  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,19 +17,20 @@
 <meta property="og:title" content="Jakub Krajniak"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="."/>
+<meta property="og:url" content="http://jkrajniak.pl"/>
   <title>Jakub Krajniak &ndash; Archives</title>
 </head>
 <body>
   <aside>
     <div>
-      <a href=".">
-        <img src="./theme/img/profile.png" alt="" title="">
+      <a href="http://jkrajniak.pl">
+        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href="http://jkrajniak.pl"></a></h1>
       <p></p>
       <nav>
         <ul class="list">
+          <li><a href="http://jkrajniak.pl/pages/contact.html#contact">Contact</a></li>
           <li><a href="http://github.com/MrTheodor/" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/jkrajniak" target="_blank">linkedin</a></li>
           <li><a href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
@@ -50,13 +52,13 @@
   <div>
     <dl>
       <dt>pią 14 październik 2016</dt>
-      <dd><a href="./generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html">Generic adaptive resolution approach to refeverse mapping of polymer melts</a></dd>
+      <dd><a href="http://jkrajniak.pl/generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html">Generic adaptive resolution approach to refeverse mapping of polymer melts</a></dd>
       <dt>czw 29 wrzesień 2016</dt>
-      <dd><a href="./generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html">Generic adaptive resolution method for reverse mapping of polymers from coarse-grained to atomistic descriptions</a></dd>
+      <dd><a href="http://jkrajniak.pl/generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html">Generic adaptive resolution method for reverse mapping of polymers from coarse-grained to atomistic descriptions</a></dd>
       <dt>pon 25 lipiec 2016</dt>
-      <dd><a href="./reverse-mapping-method-for-complex-polymer-systems.html">Reverse mapping method for complex polymer systems</a></dd>
+      <dd><a href="http://jkrajniak.pl/reverse-mapping-method-for-complex-polymer-systems.html">Reverse mapping method for complex polymer systems</a></dd>
       <dt>pon 18 lipiec 2016</dt>
-      <dd><a href="./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html">Molecular dynamics simulations of polymerization with forward and backward reactions</a></dd>
+      <dd><a href="http://jkrajniak.pl/molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html">Molecular dynamics simulations of polymerization with forward and backward reactions</a></dd>
     </dl>
   </div>
 </article>
