--- a/backmapping_networks.html
+++ b/backmapping_networks.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
+  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,11 +17,11 @@
 <meta property="og:title" content="Reverse mapping method for complex polymer systems"/>
 <meta property="og:description" content="We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./reverse-mapping-method-for-complex-polymer-systems.html"/>
+<meta property="og:url" content="http://jkrajniak.pl/reverse-mapping-method-for-complex-polymer-systems.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-07-25 00:04:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/jakub-krajniak.html">
+<meta property="article:author" content="http://jkrajniak.pl/author/jakub-krajniak.html">
 <meta property="article:section" content="articles"/>
 <meta property="article:tag" content="articles"/>
 <meta property="og:image" content="">  <title>Jakub Krajniak &ndash; Reverse mapping method for complex polymer systems</title>
@@ -28,13 +29,14 @@
 <body>
   <aside>
     <div>
-      <a href=".">
-        <img src="./theme/img/profile.png" alt="" title="">
+      <a href="http://jkrajniak.pl">
+        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href="http://jkrajniak.pl"></a></h1>
       <p></p>
       <nav>
         <ul class="list">
+          <li><a href="http://jkrajniak.pl/pages/contact.html#contact">Contact</a></li>
           <li><a href="http://github.com/MrTheodor/" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/jkrajniak" target="_blank">linkedin</a></li>
           <li><a href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
@@ -59,7 +61,7 @@
             Erik Nies
             Giovanni Samaey
     </p>
-    <p>Posted on 25 lipiec 2016 in <a href="./category/articles.html">articles</a></p>
+    <p>Posted on 25 lipiec 2016 in <a href="http://jkrajniak.pl/category/articles.html">articles</a></p>
   </header>
   <div>
     <p>We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale.
@@ -74,7 +76,7 @@ In all cases, we show how the properties of the reverse mapped systems depend on
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/articles.html">articles</a>
+      <a href="http://jkrajniak.pl/tag/articles.html">articles</a>
     </p>
   </div>
 </article>
@@ -94,10 +96,10 @@ In all cases, we show how the properties of the reverse mapped systems depend on
   "author": {
     "@type": "Person",
     "name": "Jakub Krajniak",
-    "url": "./author/jakub-krajniak.html"
+    "url": "http://jkrajniak.pl/author/jakub-krajniak.html"
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
-  "url": "./reverse-mapping-method-for-complex-polymer-systems.html",
+  "url": "http://jkrajniak.pl/reverse-mapping-method-for-complex-polymer-systems.html",
   "description": "We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure ..."
 }
 </script></body>
