--- a/generic_adaptive.html
+++ b/generic_adaptive.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
+  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,11 +17,11 @@
 <meta property="og:title" content="Generic adaptive resolution method for reverse mapping of polymers from coarse-grained to atomistic descriptions"/>
 <meta property="og:description" content="In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html"/>
+<meta property="og:url" content="http://jkrajniak.pl/generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-09-29 00:04:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/jakub-krajniak.html">
+<meta property="article:author" content="http://jkrajniak.pl/author/jakub-krajniak.html">
 <meta property="article:section" content="articles"/>
 <meta property="article:tag" content="articles"/>
 <meta property="og:image" content="">  <title>Jakub Krajniak &ndash; Generic adaptive resolution method for reverse mapping of polymers from coarse-grained to atomistic descriptions</title>
@@ -28,13 +29,14 @@
 <body>
   <aside>
     <div>
-      <a href=".">
-        <img src="./theme/img/profile.png" alt="" title="">
+      <a href="http://jkrajniak.pl">
+        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href="http://jkrajniak.pl"></a></h1>
       <p></p>
       <nav>
         <ul class="list">
+          <li><a href="http://jkrajniak.pl/pages/contact.html#contact">Contact</a></li>
           <li><a href="http://github.com/MrTheodor/" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/jkrajniak" target="_blank">linkedin</a></li>
           <li><a href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
@@ -58,7 +60,7 @@
             Erik Nies
             Giovanni Samaey
     </p>
-    <p>Posted on 29 wrzesień 2016 in <a href="./category/articles.html">articles</a></p>
+    <p>Posted on 29 wrzesień 2016 in <a href="http://jkrajniak.pl/category/articles.html">articles</a></p>
   </header>
   <div>
     <p>In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS).
@@ -73,7 +75,7 @@ The conformational and dynamical properties of the reconstructed systems are in 
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/articles.html">articles</a>
+      <a href="http://jkrajniak.pl/tag/articles.html">articles</a>
     </p>
   </div>
 </article>
@@ -93,10 +95,10 @@ The conformational and dynamical properties of the reconstructed systems are in 
   "author": {
     "@type": "Person",
     "name": "Jakub Krajniak",
-    "url": "./author/jakub-krajniak.html"
+    "url": "http://jkrajniak.pl/author/jakub-krajniak.html"
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
-  "url": "./generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html",
+  "url": "http://jkrajniak.pl/generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html",
   "description": "In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can ..."
 }
 </script></body>
