--- a/mmm2016.html
+++ b/mmm2016.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
+  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,11 +17,11 @@
 <meta property="og:title" content="Generic adaptive resolution approach to refeverse mapping of polymer melts"/>
 <meta property="og:description" content="Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html"/>
+<meta property="og:url" content="http://jkrajniak.pl/generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-10-14 00:00:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/jakub-krajniak.html">
+<meta property="article:author" content="http://jkrajniak.pl/author/jakub-krajniak.html">
 <meta property="article:section" content="articles"/>
 <meta property="article:tag" content="conferences"/>
 <meta property="og:image" content="">  <title>Jakub Krajniak &ndash; Generic adaptive resolution approach to refeverse mapping of polymer melts</title>
@@ -28,13 +29,14 @@
 <body>
   <aside>
     <div>
-      <a href=".">
-        <img src="./theme/img/profile.png" alt="" title="">
+      <a href="http://jkrajniak.pl">
+        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href="http://jkrajniak.pl"></a></h1>
       <p></p>
       <nav>
         <ul class="list">
+          <li><a href="http://jkrajniak.pl/pages/contact.html#contact">Contact</a></li>
           <li><a href="http://github.com/MrTheodor/" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/jkrajniak" target="_blank">linkedin</a></li>
           <li><a href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
@@ -58,7 +60,7 @@
             Sudharsan Pandiyan
             Erik Nies
     </p>
-    <p>Posted on 14 październik 2016 in <a href="./category/articles.html">articles</a></p>
+    <p>Posted on 14 październik 2016 in <a href="http://jkrajniak.pl/category/articles.html">articles</a></p>
   </header>
   <div>
     <p>Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring
@@ -81,7 +83,7 @@ reconstructed systems with the reference atomistic simulation.</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/conferences.html">conferences</a>
+      <a href="http://jkrajniak.pl/tag/conferences.html">conferences</a>
     </p>
   </div>
 </article>
@@ -101,10 +103,10 @@ reconstructed systems with the reference atomistic simulation.</p>
   "author": {
     "@type": "Person",
     "name": "Jakub Krajniak",
-    "url": "./author/jakub-krajniak.html"
+    "url": "http://jkrajniak.pl/author/jakub-krajniak.html"
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
-  "url": "./generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html",
+  "url": "http://jkrajniak.pl/generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html",
   "description": "Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom ..."
 }
 </script></body>
