--- a/authors.html
+++ b/authors.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
-  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,16 +16,16 @@
 <meta property="og:title" content="Jakub Krajniak"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://jkrajniak.pl"/>
+<meta property="og:url" content="."/>
   <title>Jakub Krajniak &ndash; Authors</title>
 </head>
 <body>
   <aside>
     <div>
-      <a href="http://jkrajniak.pl">
-        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
+      <a href=".">
+        <img src="./theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="http://jkrajniak.pl"></a></h1>
+      <h1><a href="."></a></h1>
       <p></p>
       <nav>
         <ul class="list">
@@ -50,11 +49,11 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://jkrajniak.pl/author/erik-nies.html">Erik Nies</a> (4)</li>
-      <li><a href="http://jkrajniak.pl/author/giovanni-samaey.html">Giovanni Samaey</a> (4)</li>
-      <li><a href="http://jkrajniak.pl/author/jakub-krajniak.html">Jakub Krajniak</a> (4)</li>
-      <li><a href="http://jkrajniak.pl/author/sudharsan-pandiyan.html">Sudharsan Pandiyan</a> (4)</li>
-      <li><a href="http://jkrajniak.pl/author/zidan-zhang.html">Zidan Zhang</a> (2)</li>
+      <li><a href="./author/erik-nies.html">Erik Nies</a> (4)</li>
+      <li><a href="./author/giovanni-samaey.html">Giovanni Samaey</a> (4)</li>
+      <li><a href="./author/jakub-krajniak.html">Jakub Krajniak</a> (4)</li>
+      <li><a href="./author/sudharsan-pandiyan.html">Sudharsan Pandiyan</a> (4)</li>
+      <li><a href="./author/zidan-zhang.html">Zidan Zhang</a> (2)</li>
     </ul>
   </div>
 </article>
