--- a/tags.html
+++ b/tags.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
-  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,16 +16,16 @@
 <meta property="og:title" content="Jakub Krajniak"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://jkrajniak.pl"/>
+<meta property="og:url" content="."/>
   <title>Jakub Krajniak &ndash; Tags</title>
 </head>
 <body>
   <aside>
     <div>
-      <a href="http://jkrajniak.pl">
-        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
+      <a href=".">
+        <img src="./theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="http://jkrajniak.pl"></a></h1>
+      <h1><a href="."></a></h1>
       <p></p>
       <nav>
         <ul class="list">
@@ -49,8 +48,8 @@
     <h1>Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="http://jkrajniak.pl/tag/articles.html">articles</a> (3)</li>
-          <li><a href="http://jkrajniak.pl/tag/conferences.html">conferences</a> (1)</li>
+    <ul class="list">          <li><a href="./tag/articles.html">articles</a> (3)</li>
+          <li><a href="./tag/conferences.html">conferences</a> (1)</li>
     </ul>
   </div>
 </article>
