--- a/water_emission.html
+++ b/water_emission.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
-  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
+  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,11 +16,11 @@
 <meta property="og:title" content="Molecular dynamics simulations of polymerization with forward and backward reactions"/>
 <meta property="og:description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://jkrajniak.pl/molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html"/>
+<meta property="og:url" content="./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-07-18 00:04:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://jkrajniak.pl/author/jakub-krajniak.html">
+<meta property="article:author" content="./author/jakub-krajniak.html">
 <meta property="article:section" content="articles"/>
 <meta property="article:tag" content="articles"/>
 <meta property="og:image" content="">  <title>Jakub Krajniak &ndash; Molecular dynamics simulations of polymerization with forward and backward reactions</title>
@@ -29,10 +28,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://jkrajniak.pl">
-        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
+      <a href=".">
+        <img src="./theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="http://jkrajniak.pl"></a></h1>
+      <h1><a href="."></a></h1>
       <p></p>
       <nav>
         <ul class="list">
@@ -60,7 +59,7 @@
             Erik Nies
             Giovanni Samaey
     </p>
-    <p>Posted on 18 lipiec 2016 in <a href="http://jkrajniak.pl/category/articles.html">articles</a></p>
+    <p>Posted on 18 lipiec 2016 in <a href="./category/articles.html">articles</a></p>
   </header>
   <div>
     <p>We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct.
@@ -71,7 +70,7 @@ The methods are implemented in a publicly available software package, and are ea
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://jkrajniak.pl/tag/articles.html">articles</a>
+      <a href="./tag/articles.html">articles</a>
     </p>
   </div>
 </article>
@@ -91,10 +90,10 @@ The methods are implemented in a publicly available software package, and are ea
   "author": {
     "@type": "Person",
     "name": "Jakub Krajniak",
-    "url": "http://jkrajniak.pl/author/jakub-krajniak.html"
+    "url": "./author/jakub-krajniak.html"
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
-  "url": "http://jkrajniak.pl/molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html",
+  "url": "./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html",
   "description": "We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical ..."
 }
 </script></body>
