--- a/backmapping_networks.html
+++ b/backmapping_networks.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="" />
 <meta name="author" content="Jakub Krajniak" />
-<meta name="description" content="We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure ..." />
+<meta name="description" content="We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure …" />
 <meta name="keywords" content="articles">
 <meta property="og:site_name" content="Jakub Krajniak"/>
 <meta property="og:title" content="Reverse mapping method for complex polymer systems"/>
-<meta property="og:description" content="We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure ..."/>
+<meta property="og:description" content="We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./reverse-mapping-method-for-complex-polymer-systems.html"/>
 <meta property="og:type" content="article"/>
@@ -98,7 +98,7 @@ In all cases, we show how the properties of the reverse mapped systems depend on
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
   "url": "./reverse-mapping-method-for-complex-polymer-systems.html",
-  "description": "We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure ..."
+  "description": "We present a comprehensive approach for reverse mapping of complex polymer systems in which the connectivity is created by the simulation of chemical reactions at the coarse-grained scale. Within the work, we use a recently developed generic adaptive reverse mapping procedure, that we adapt to handle the varying connectivity structure …"
 }
 </script></body>
 </html>
