--- a/generic_adaptive.html
+++ b/generic_adaptive.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="" />
 <meta name="author" content="Jakub Krajniak" />
-<meta name="description" content="In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can ..." />
+<meta name="description" content="In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can …" />
 <meta name="keywords" content="articles">
 <meta property="og:site_name" content="Jakub Krajniak"/>
 <meta property="og:title" content="Generic adaptive resolution method for reverse mapping of polymers from coarse-grained to atomistic descriptions"/>
-<meta property="og:description" content="In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can ..."/>
+<meta property="og:description" content="In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html"/>
 <meta property="og:type" content="article"/>
@@ -97,7 +97,7 @@ The conformational and dynamical properties of the reconstructed systems are in 
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
   "url": "./generic-adaptive-resolution-method-for-reverse-mapping-of-polymers-from-coarse-grained-to-atomistic-descriptions.html",
-  "description": "In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can ..."
+  "description": "In this paper, we propose a new generic approach for reverse mapping from coarse-grained to atomistic scale based on the adaptive resolution scheme (AdResS). In AdResS simulation, two spatial domains, modelled at two different scales, are brought together in a concurrent simulation by defining a hybrid region where particles can …"
 }
 </script></body>
 </html>
