--- a/mmm2016.html
+++ b/mmm2016.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="" />
 <meta name="author" content="Jakub Krajniak" />
-<meta name="description" content="Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom ..." />
+<meta name="description" content="Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom …" />
 <meta name="keywords" content="conferences">
 <meta property="og:site_name" content="Jakub Krajniak"/>
 <meta property="og:title" content="Generic adaptive resolution approach to refeverse mapping of polymer melts"/>
-<meta property="og:description" content="Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom ..."/>
+<meta property="og:description" content="Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html"/>
 <meta property="og:type" content="article"/>
@@ -105,7 +105,7 @@ reconstructed systems with the reference atomistic simulation.</p>
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
   "url": "./generic-adaptive-resolution-approach-to-refeverse-mapping-of-polymer-melts.html",
-  "description": "Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom ..."
+  "description": "Over the past two decades, coarse-grained (CG) simulation has become an important method that allows exploring behaviour of larger (bio-)polymer systems over longer time scales. Although many properties of polymers can be analysed at the CG level, some properties strictly depend on the presence of fine-scale degrees of freedom …"
 }
 </script></body>
 </html>
