--- a/water_emission.html
+++ b/water_emission.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="" />
 <meta name="author" content="Jakub Krajniak" />
-<meta name="description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical ..." />
+<meta name="description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical …" />
 <meta name="keywords" content="articles">
 <meta property="og:site_name" content="Jakub Krajniak"/>
 <meta property="og:title" content="Molecular dynamics simulations of polymerization with forward and backward reactions"/>
-<meta property="og:description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical ..."/>
+<meta property="og:description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html"/>
 <meta property="og:type" content="article"/>
@@ -94,7 +94,7 @@ The methods are implemented in a publicly available software package, and are ea
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
   "url": "./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html",
-  "description": "We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical ..."
+  "description": "We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical …"
 }
 </script></body>
 </html>
