--- a/water_emission.html
+++ b/water_emission.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./theme/css/style.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/pygments.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/pygments.min.css">
+  <link rel="stylesheet" type="text/css" href="http://jkrajniak.pl/theme/css/font-awesome.min.css">
+  <link href="http://jkrajniak.pl/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jakub Krajniak Atom">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,11 +17,11 @@
 <meta property="og:title" content="Molecular dynamics simulations of polymerization with forward and backward reactions"/>
 <meta property="og:description" content="We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html"/>
+<meta property="og:url" content="http://jkrajniak.pl/molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-07-18 00:04:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/jakub-krajniak.html">
+<meta property="article:author" content="http://jkrajniak.pl/author/jakub-krajniak.html">
 <meta property="article:section" content="articles"/>
 <meta property="article:tag" content="articles"/>
 <meta property="og:image" content="">  <title>Jakub Krajniak &ndash; Molecular dynamics simulations of polymerization with forward and backward reactions</title>
@@ -28,22 +29,21 @@
 <body>
   <aside>
     <div>
-      <a href=".">
-        <img src="./theme/img/profile.png" alt="" title="">
+      <a href="http://jkrajniak.pl">
+        <img src="http://jkrajniak.pl/theme/img/profile.png" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href="http://jkrajniak.pl"></a></h1>
       <p></p>
       <nav>
         <ul class="list">
-          <li><a href="http://github.com/MrTheodor/" target="_blank">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/jkrajniak" target="_blank">linkedin</a></li>
-          <li><a href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
-          <li><a href="https://www.researchgate.net/profile/Jakub_Krajniak" target="_blank">ResearchGate</a></li>
+          <li><a href="phd_project.html" target="_blank">phd project</a></li>
         </ul>
       </nav>
       <ul class="social">
-        <li><a class="sc-You can add links in your config file" href="#" target="_blank"><i class="fa fa-You can add links in your config file"></i></a></li>
-        <li><a class="sc-Another social link" href="#" target="_blank"><i class="fa fa-Another social link"></i></a></li>
+        <li><a class="sc-github" href="http://github.com/jkrajniak/" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/jkrajniak" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="sc-google" href="https://scholar.google.be/citations?user=FUSoMAIAAAAJ&hl=en" target="_blank"><i class="fa fa-google"></i></a></li>
+        <li><a class="sc-researchgate" href="https://www.researchgate.net/profile/Jakub_Krajniak" target="_blank"><i class="fa fa-researchgate"></i></a></li>
       </ul>
     </div>
   </aside>
@@ -59,7 +59,7 @@
             Erik Nies
             Giovanni Samaey
     </p>
-    <p>Posted on 18 lipiec 2016 in <a href="./category/articles.html">articles</a></p>
+    <p>Posted on 18 lipca 2016 in <a href="http://jkrajniak.pl/category/articles.html">articles</a></p>
   </header>
   <div>
     <p>We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct.
@@ -70,7 +70,7 @@ The methods are implemented in a publicly available software package, and are ea
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/articles.html">articles</a>
+      <a href="http://jkrajniak.pl/tag/articles.html">articles</a>
     </p>
   </div>
 </article>
@@ -90,10 +90,10 @@ The methods are implemented in a publicly available software package, and are ea
   "author": {
     "@type": "Person",
     "name": "Jakub Krajniak",
-    "url": "./author/jakub-krajniak.html"
+    "url": "http://jkrajniak.pl/author/jakub-krajniak.html"
   },
   "image": "{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/profile.png",
-  "url": "./molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html",
+  "url": "http://jkrajniak.pl/molecular-dynamics-simulations-of-polymerization-with-forward-and-backward-reactions.html",
   "description": "We look into the polymerization of polyethylene terephthalate (PET) at the coarse-grained level as an example of a polycondensation reaction with water as a byproduct. To fully simulate this reaction, we develop novel parallel algorithms that allow creating and removing the byproduct molecule appearing as a result of the chemical …"
 }
 </script></body>
