--- a/witek/index.html
+++ b/witek/index.html
@@ -26,7 +26,7 @@
 
   <nav>
     <div class="nav-wrapper">
-      <div class="col s12">
+      <div class="col s12" style="text-align: center">
         <a href="#!" class="breadcrumb">Lista prezentowa Witka</a>
       </div>
     </div>
@@ -40,6 +40,10 @@
     <div class="row">
       <ul id="wishlist" class="collapsible popout">
       </ul>
+    </div>
+    <div class="row" id="disclaimer" style="display: none;">
+      <h3>Czego nie kupować</h3>
+      ubrań, zabawek z motywami bajek i filmów, zabawek hałaśliwych lub plastikowych (o ile nie jest to konieczna cecha), puzzli 2-3 elementowych, układanek typu "włóż element w zagłębienie na desce", instrumentów
     </div>
   </div>
   <div id="modal1" class="modal">
@@ -62,7 +66,7 @@
       </div>
       <div class="modal-footer">
         <span style="display: none" id="rowid"></span>
-        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Wybieram</a>
+        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Decyduje się na to</a>
       </div>
     </form>
   </div>
