--- a/witek/index.html
+++ b/witek/index.html
@@ -27,7 +27,7 @@
   <nav>
     <div class="nav-wrapper">
       <div class="col s12" style="text-align: center">
-        <a href="#!" class="breadcrumb">Lista prezentowa Witka</a>
+        <a href="#!" class="breadcrumb" style="font-size: 4em;">Lista prezentowa Witka</a>
       </div>
     </div>
   </nav>
