--- a/witek/index.html
+++ b/witek/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row" id="disclaimer" style="display: none;">
       <h3>Czego nie kupować</h3>
-      ubrań, zabawek z motywami bajek i filmów, zabawek hałaśliwych lub plastikowych (o ile nie jest to konieczna cecha), puzzli 2-3 elementowych, układanek typu "włóż element w zagłębienie na desce", instrumentów
+      SŁODYCZY, ubrań, zabawek z motywami bajek i filmów, zabawek hałaśliwych lub plastikowych (o ile nie jest to konieczna cecha), puzzli 2-3 elementowych, układanek typu "włóż element w zagłębienie na desce", instrumentów
     </div>
   </div>
   <div id="modal1" class="modal">
