--- a/witek/index.html
+++ b/witek/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="modal-footer">
         <span style="display: none" id="rowid"></span>
-        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Decyduje się na to</a>
+        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Chcę to podarować <i class="material-icons right">send</i>/a>
       </div>
     </form>
   </div>
