--- a/witek/index.html
+++ b/witek/index.html
@@ -51,7 +51,7 @@
       </ul>
     </div>
     <div class="row" id="disclaimer" style="display: none;">
-      <h3>Czego nie kupować</h3>
+      <h3>Czego nie kupować?</h3>
       SŁODYCZY, ubrań, zabawek z motywami bajek i filmów, zabawek hałaśliwych lub plastikowych (o ile nie jest to konieczna cecha), puzzli 2-3 elementowych, układanek typu "włóż element w zagłębienie na desce", instrumentów
     </div>
   </div>
