--- a/witek/index.html
+++ b/witek/index.html
@@ -36,7 +36,7 @@
   <nav>
     <div class="nav-wrapper">
       <div class="col s12" style="text-align: center">
-        <a href="#!" class="breadcrumb" style="font-size: 4em;">Lista prezentowa Witka</a>
+        <a href="#!" class="breadcrumb title-nav">Lista prezentowa Witka</a>
       </div>
     </div>
   </nav>
@@ -75,7 +75,7 @@
       </div>
       <div class="modal-footer">
         <span style="display: none" id="rowid"></span>
-        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Chcę to podarować <i class="material-icons right">send</i>/a>
+        <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Chcę to podarować <i class="material-icons right">send</i></a>
       </div>
     </form>
   </div>
