--- a/witek/index.html
+++ b/witek/index.html
@@ -25,7 +25,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
-  <script src="js/main.js"></script>
+<!--   <script src="js/main.js"></script> -->
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -40,7 +40,10 @@
       </div>
     </div>
   </nav>
-  <div id="overlay">
+  <div class="container">
+    <h1>Strona tymczasowo zawieszona, kontakt z rodzicami :-)</h1>
+  </div>
+<!--   <div id="overlay">
     <div class="cv-spinner">
       <span class="spinner"></span>
     </div>
@@ -78,7 +81,7 @@
         <a href="#!" id="select-item" class="modal-close waves-effect waves-green btn">Chcę to podarować <i class="material-icons right">send</i></a>
       </div>
     </form>
-  </div>
+  </div> -->
   <!--JavaScript at end of body for optimized loading-->
   <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
